qt6/gen_qvectornd.nim


proc fcQVector2D_new(): ptr cQVector2D {.importc: "QVector2D_new".}
proc fcQVector2D_new2(param1: cint): ptr cQVector2D {.importc: "QVector2D_new2".}
proc fcQVector2D_new3(xpos: float32, ypos: float32): ptr cQVector2D {.importc: "QVector2D_new3".}
proc fcQVector2D_new4(point: pointer): ptr cQVector2D {.importc: "QVector2D_new4".}
proc fcQVector2D_new5(point: pointer): ptr cQVector2D {.importc: "QVector2D_new5".}
proc fcQVector2D_new6(vector: pointer): ptr cQVector2D {.importc: "QVector2D_new6".}
proc fcQVector2D_new7(vector: pointer): ptr cQVector2D {.importc: "QVector2D_new7".}
proc fcQVector2D_new8(param1: pointer): ptr cQVector2D {.importc: "QVector2D_new8".}
proc fcQVector2D_isNull(self: pointer, ): bool {.importc: "QVector2D_isNull".}
proc fcQVector2D_x(self: pointer, ): float32 {.importc: "QVector2D_x".}
proc fcQVector2D_y(self: pointer, ): float32 {.importc: "QVector2D_y".}
proc fcQVector2D_setX(self: pointer, x: float32): void {.importc: "QVector2D_setX".}
proc fcQVector2D_setY(self: pointer, y: float32): void {.importc: "QVector2D_setY".}
proc fcQVector2D_operatorSubscript(self: pointer, i: cint): float32 {.importc: "QVector2D_operatorSubscript".}
proc fcQVector2D_length(self: pointer, ): float32 {.importc: "QVector2D_length".}
proc fcQVector2D_lengthSquared(self: pointer, ): float32 {.importc: "QVector2D_lengthSquared".}
proc fcQVector2D_normalized(self: pointer, ): pointer {.importc: "QVector2D_normalized".}
proc fcQVector2D_normalize(self: pointer, ): void {.importc: "QVector2D_normalize".}
proc fcQVector2D_distanceToPoint(self: pointer, point: pointer): float32 {.importc: "QVector2D_distanceToPoint".}
proc fcQVector2D_distanceToLine(self: pointer, point: pointer, direction: pointer): float32 {.importc: "QVector2D_distanceToLine".}
proc fcQVector2D_operatorPlusAssign(self: pointer, vector: pointer): pointer {.importc: "QVector2D_operatorPlusAssign".}
proc fcQVector2D_operatorMinusAssign(self: pointer, vector: pointer): pointer {.importc: "QVector2D_operatorMinusAssign".}
proc fcQVector2D_operatorMultiplyAssign(self: pointer, factor: float32): pointer {.importc: "QVector2D_operatorMultiplyAssign".}
proc fcQVector2D_operatorMultiplyAssignWithVector(self: pointer, vector: pointer): pointer {.importc: "QVector2D_operatorMultiplyAssignWithVector".}
proc fcQVector2D_operatorDivideAssign(self: pointer, divisor: float32): pointer {.importc: "QVector2D_operatorDivideAssign".}
proc fcQVector2D_operatorDivideAssignWithVector(self: pointer, vector: pointer): pointer {.importc: "QVector2D_operatorDivideAssignWithVector".}
proc fcQVector2D_dotProduct(v1: pointer, v2: pointer): float32 {.importc: "QVector2D_dotProduct".}
proc fcQVector2D_toVector3D(self: pointer, ): pointer {.importc: "QVector2D_toVector3D".}
proc fcQVector2D_toVector4D(self: pointer, ): pointer {.importc: "QVector2D_toVector4D".}
proc fcQVector2D_toPoint(self: pointer, ): pointer {.importc: "QVector2D_toPoint".}
proc fcQVector2D_toPointF(self: pointer, ): pointer {.importc: "QVector2D_toPointF".}
proc fcQVector2D_ToQVariant(self: pointer, ): pointer {.importc: "QVector2D_ToQVariant".}
proc fcQVector2D_delete(self: pointer) {.importc: "QVector2D_delete".}
proc fcQVector3D_new(): ptr cQVector3D {.importc: "QVector3D_new".}
proc fcQVector3D_new2(param1: cint): ptr cQVector3D {.importc: "QVector3D_new2".}
proc fcQVector3D_new3(xpos: float32, ypos: float32, zpos: float32): ptr cQVector3D {.importc: "QVector3D_new3".}
proc fcQVector3D_new4(point: pointer): ptr cQVector3D {.importc: "QVector3D_new4".}
proc fcQVector3D_new5(point: pointer): ptr cQVector3D {.importc: "QVector3D_new5".}
proc fcQVector3D_new6(vector: pointer): ptr cQVector3D {.importc: "QVector3D_new6".}
proc fcQVector3D_new7(vector: pointer, zpos: float32): ptr cQVector3D {.importc: "QVector3D_new7".}
proc fcQVector3D_new8(vector: pointer): ptr cQVector3D {.importc: "QVector3D_new8".}
proc fcQVector3D_new9(param1: pointer): ptr cQVector3D {.importc: "QVector3D_new9".}
proc fcQVector3D_isNull(self: pointer, ): bool {.importc: "QVector3D_isNull".}
proc fcQVector3D_x(self: pointer, ): float32 {.importc: "QVector3D_x".}
proc fcQVector3D_y(self: pointer, ): float32 {.importc: "QVector3D_y".}
proc fcQVector3D_z(self: pointer, ): float32 {.importc: "QVector3D_z".}
proc fcQVector3D_setX(self: pointer, x: float32): void {.importc: "QVector3D_setX".}
proc fcQVector3D_setY(self: pointer, y: float32): void {.importc: "QVector3D_setY".}
proc fcQVector3D_setZ(self: pointer, z: float32): void {.importc: "QVector3D_setZ".}
proc fcQVector3D_operatorSubscript(self: pointer, i: cint): float32 {.importc: "QVector3D_operatorSubscript".}
proc fcQVector3D_length(self: pointer, ): float32 {.importc: "QVector3D_length".}
proc fcQVector3D_lengthSquared(self: pointer, ): float32 {.importc: "QVector3D_lengthSquared".}
proc fcQVector3D_normalized(self: pointer, ): pointer {.importc: "QVector3D_normalized".}
proc fcQVector3D_normalize(self: pointer, ): void {.importc: "QVector3D_normalize".}
proc fcQVector3D_operatorPlusAssign(self: pointer, vector: pointer): pointer {.importc: "QVector3D_operatorPlusAssign".}
proc fcQVector3D_operatorMinusAssign(self: pointer, vector: pointer): pointer {.importc: "QVector3D_operatorMinusAssign".}
proc fcQVector3D_operatorMultiplyAssign(self: pointer, factor: float32): pointer {.importc: "QVector3D_operatorMultiplyAssign".}
proc fcQVector3D_operatorMultiplyAssignWithVector(self: pointer, vector: pointer): pointer {.importc: "QVector3D_operatorMultiplyAssignWithVector".}
proc fcQVector3D_operatorDivideAssign(self: pointer, divisor: float32): pointer {.importc: "QVector3D_operatorDivideAssign".}
proc fcQVector3D_operatorDivideAssignWithVector(self: pointer, vector: pointer): pointer {.importc: "QVector3D_operatorDivideAssignWithVector".}
proc fcQVector3D_dotProduct(v1: pointer, v2: pointer): float32 {.importc: "QVector3D_dotProduct".}
proc fcQVector3D_crossProduct(v1: pointer, v2: pointer): pointer {.importc: "QVector3D_crossProduct".}
proc fcQVector3D_normal(v1: pointer, v2: pointer): pointer {.importc: "QVector3D_normal".}
proc fcQVector3D_normal2(v1: pointer, v2: pointer, v3: pointer): pointer {.importc: "QVector3D_normal2".}
proc fcQVector3D_project(self: pointer, modelView: pointer, projection: pointer, viewport: pointer): pointer {.importc: "QVector3D_project".}
proc fcQVector3D_unproject(self: pointer, modelView: pointer, projection: pointer, viewport: pointer): pointer {.importc: "QVector3D_unproject".}
proc fcQVector3D_distanceToPoint(self: pointer, point: pointer): float32 {.importc: "QVector3D_distanceToPoint".}
proc fcQVector3D_distanceToPlane(self: pointer, plane: pointer, normal: pointer): float32 {.importc: "QVector3D_distanceToPlane".}
proc fcQVector3D_distanceToPlane2(self: pointer, plane1: pointer, plane2: pointer, plane3: pointer): float32 {.importc: "QVector3D_distanceToPlane2".}
proc fcQVector3D_distanceToLine(self: pointer, point: pointer, direction: pointer): float32 {.importc: "QVector3D_distanceToLine".}
proc fcQVector3D_toVector2D(self: pointer, ): pointer {.importc: "QVector3D_toVector2D".}
proc fcQVector3D_toVector4D(self: pointer, ): pointer {.importc: "QVector3D_toVector4D".}
proc fcQVector3D_toPoint(self: pointer, ): pointer {.importc: "QVector3D_toPoint".}
proc fcQVector3D_toPointF(self: pointer, ): pointer {.importc: "QVector3D_toPointF".}
proc fcQVector3D_ToQVariant(self: pointer, ): pointer {.importc: "QVector3D_ToQVariant".}
proc fcQVector3D_delete(self: pointer) {.importc: "QVector3D_delete".}
proc fcQVector4D_new(): ptr cQVector4D {.importc: "QVector4D_new".}
proc fcQVector4D_new2(param1: cint): ptr cQVector4D {.importc: "QVector4D_new2".}
proc fcQVector4D_new3(xpos: float32, ypos: float32, zpos: float32, wpos: float32): ptr cQVector4D {.importc: "QVector4D_new3".}
proc fcQVector4D_new4(point: pointer): ptr cQVector4D {.importc: "QVector4D_new4".}
proc fcQVector4D_new5(point: pointer): ptr cQVector4D {.importc: "QVector4D_new5".}
proc fcQVector4D_new6(vector: pointer): ptr cQVector4D {.importc: "QVector4D_new6".}
proc fcQVector4D_new7(vector: pointer, zpos: float32, wpos: float32): ptr cQVector4D {.importc: "QVector4D_new7".}
proc fcQVector4D_new8(vector: pointer): ptr cQVector4D {.importc: "QVector4D_new8".}
proc fcQVector4D_new9(vector: pointer, wpos: float32): ptr cQVector4D {.importc: "QVector4D_new9".}
proc fcQVector4D_new10(param1: pointer): ptr cQVector4D {.importc: "QVector4D_new10".}
proc fcQVector4D_isNull(self: pointer, ): bool {.importc: "QVector4D_isNull".}
proc fcQVector4D_x(self: pointer, ): float32 {.importc: "QVector4D_x".}
proc fcQVector4D_y(self: pointer, ): float32 {.importc: "QVector4D_y".}
proc fcQVector4D_z(self: pointer, ): float32 {.importc: "QVector4D_z".}
proc fcQVector4D_w(self: pointer, ): float32 {.importc: "QVector4D_w".}
proc fcQVector4D_setX(self: pointer, x: float32): void {.importc: "QVector4D_setX".}
proc fcQVector4D_setY(self: pointer, y: float32): void {.importc: "QVector4D_setY".}
proc fcQVector4D_setZ(self: pointer, z: float32): void {.importc: "QVector4D_setZ".}
proc fcQVector4D_setW(self: pointer, w: float32): void {.importc: "QVector4D_setW".}
proc fcQVector4D_operatorSubscript(self: pointer, i: cint): float32 {.importc: "QVector4D_operatorSubscript".}
proc fcQVector4D_length(self: pointer, ): float32 {.importc: "QVector4D_length".}
proc fcQVector4D_lengthSquared(self: pointer, ): float32 {.importc: "QVector4D_lengthSquared".}
proc fcQVector4D_normalized(self: pointer, ): pointer {.importc: "QVector4D_normalized".}
proc fcQVector4D_normalize(self: pointer, ): void {.importc: "QVector4D_normalize".}
proc fcQVector4D_operatorPlusAssign(self: pointer, vector: pointer): pointer {.importc: "QVector4D_operatorPlusAssign".}
proc fcQVector4D_operatorMinusAssign(self: pointer, vector: pointer): pointer {.importc: "QVector4D_operatorMinusAssign".}
proc fcQVector4D_operatorMultiplyAssign(self: pointer, factor: float32): pointer {.importc: "QVector4D_operatorMultiplyAssign".}
proc fcQVector4D_operatorMultiplyAssignWithVector(self: pointer, vector: pointer): pointer {.importc: "QVector4D_operatorMultiplyAssignWithVector".}
proc fcQVector4D_operatorDivideAssign(self: pointer, divisor: float32): pointer {.importc: "QVector4D_operatorDivideAssign".}
proc fcQVector4D_operatorDivideAssignWithVector(self: pointer, vector: pointer): pointer {.importc: "QVector4D_operatorDivideAssignWithVector".}
proc fcQVector4D_dotProduct(v1: pointer, v2: pointer): float32 {.importc: "QVector4D_dotProduct".}
proc fcQVector4D_toVector2D(self: pointer, ): pointer {.importc: "QVector4D_toVector2D".}
proc fcQVector4D_toVector2DAffine(self: pointer, ): pointer {.importc: "QVector4D_toVector2DAffine".}
proc fcQVector4D_toVector3D(self: pointer, ): pointer {.importc: "QVector4D_toVector3D".}
proc fcQVector4D_toVector3DAffine(self: pointer, ): pointer {.importc: "QVector4D_toVector3DAffine".}
proc fcQVector4D_toPoint(self: pointer, ): pointer {.importc: "QVector4D_toPoint".}
proc fcQVector4D_toPointF(self: pointer, ): pointer {.importc: "QVector4D_toPointF".}
proc fcQVector4D_ToQVariant(self: pointer, ): pointer {.importc: "QVector4D_ToQVariant".}
proc fcQVector4D_delete(self: pointer) {.importc: "QVector4D_delete".}


func init*(T: type QVector2D, h: ptr cQVector2D): QVector2D =
  T(h: h)
proc create*(T: type QVector2D, ): QVector2D =

  QVector2D.init(fcQVector2D_new())
proc create*(T: type QVector2D, param1: gen_qnamespace.Initialization): QVector2D =

  QVector2D.init(fcQVector2D_new2(cint(param1)))
proc create*(T: type QVector2D, xpos: float32, ypos: float32): QVector2D =

  QVector2D.init(fcQVector2D_new3(xpos, ypos))
proc create*(T: type QVector2D, point: gen_qpoint.QPoint): QVector2D =

  QVector2D.init(fcQVector2D_new4(point.h))
proc create2*(T: type QVector2D, point: gen_qpoint.QPointF): QVector2D =

  QVector2D.init(fcQVector2D_new5(point.h))
proc create2*(T: type QVector2D, vector: QVector3D): QVector2D =
